--- a/CSharp.Basics/CSharp.Basics.csproj
+++ b/CSharp.Basics/CSharp.Basics.csproj
@@ -44,7 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasicArrayOperations.cs" />
+    <Compile Include="ConditionIntro.cs" />
     <Compile Include="DateFormatting.cs" />
+    <Compile Include="LoopIntro.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
